--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1306,35 +1306,28 @@
             "args": [
                 "-o",
                 "-s",
-                // "--max_samples", "200",
                 "-e",   "100",
                 "-b", "16",
                 "-lr", "1e-3", 
                 "--model", "POMELO_module",  
                 "--head", "v3",
-                // "--grouped",
-                // "-l", "log_l1_loss", "L1reg", 
+                "--feature_extractor", "DDA",
                 "-l", "log_l1_loss",
-                // "-la", "1.0", "0.01",
                 "-la", "1.0",
                 "--empty_eps", "0.01",
-                "-esr2", "0.001",
+                "-sreg", "0.01",
                 "-dw","2",
                 "-S2",
                 "-NIR",
                 "-S1",
                 "-f",
-                // "16",
-                "8",
-                // "--dilation", "2",
+                "4",
                 "-rse",
                 "-treg", "pricp2",
-                //"-treg", "pricp2",
                 "-tregtrain", "pricp2",
                 "-exZH",
                 "-val", "1",
                 "--lr_step", "5",
-                // "--lr_gamma", "0.5",
                 "--lr_gamma", "0.75",
                 "--full_aug",
                 "--num_workers", "6", 
@@ -1343,32 +1336,22 @@
                 // "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1775_557/last_model.pth",
                 "--supmode", "weaksup",
                 "--lam_weak", "100",
-                // "--supmode", "unsup",
                 "--nomain",
-                // "--weak_merge_aug",
-                // "--max_weak_samples", "2",
                 "--val_every_n_epochs", "1",
-                // "--test_every_i_steps", "50",
-                // "--val_every_n_epochs", "100",
-                // "--weak_batch_size", "4",
                 "--weak_batch_size", "1",
                 "--occupancymodel",
-                // "--buildinginput",
-                // "--segmentationinput",
-                "--useposembedding",
+                // "--useposembedding",
                 "--weightdecay_pos", "0.0",
                 "--weightdecay", "0.01",
-                // "--val_every_i_steps", "5000",
                 "--sentinelbuildings",
                 "--buildinginput",
-                // "-r77",
                 "--pretrained",
-                // "--gradientaccumulation",
-                "--train_level", "coarseTRACTCE",
-                // "--weak_validation",
-                "--useposembedding",
-                // "--val_every_i_steps", "1200",
-                // "--test_every_i_steps", "100", 
+                "--train_level", "fineTRACTCE",
+                "--limit1", "9000000",
+                "--limit2", "9000000",
+                "--limit3", "13000000",
+                "--biasinit", "0.4603",
+                // "--no_opt"
             ]
         },
         {
@@ -1501,15 +1484,20 @@
                 "--weightdecay_unet", "0.00001", 
                 "--sentinelbuildings", 
                 "--pretrained", 
-                "--train_level", "coarse4synt",
-                "--limit1", "19000000",
-                "--limit2", "25000000",
-                "--limit3", "35000000",
-                // "--dropout", "0.5",
-                // "--addgaussiannoise",
-                "--max_weak_pix", "35000000",
-                "--max_pix_box", "35000000",
-                "--sparse_unet"
+                "--train_level", "coarse4",
+                // "--limit1", "19000000",
+                // "--limit2", "25000000",
+                // "--limit3", "35000000",
+                // // "--dropout", "0.5",
+                // // "--addgaussiannoise",
+                // "--max_weak_pix", "35000000",
+                // "--max_pix_box", "35000000",
+                // "--sparse_unet",
+                "--limit1", "9000000",
+                "--limit2", "9000000",
+                "--limit3", "13000000",
+                "--biasinit", "2.39",
+                "--no_opt"
             ]
         },
         {
