--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -776,11 +776,11 @@
                 "-lr", "1e-4", 
                 "--model", "POMELO_module", 
                 "--head", "v3",  
+                "--feature_extractor", "DDA",
                 "-l", "log_l1_loss", 
                 "-la", "1.0",
-                "--empty_eps", "0.01",
-                "--sparse_unet",
-                "-sreg", "0.01",
+                "--empty_eps", "0.01", 
+                "-sreg", "0.05",
                 "-dw","2", 
                 "-S2",
                 "-NIR",
@@ -815,11 +815,22 @@
                 "--sentinelbuildings",
                 "--train_level", "coarse",
                 "--pretrained",
-                "--limit1", "19000000",
+                // "--limit1", "19000000",
+                // "--limit2", "25000000",
+                // "--limit3", "35000000",
+                // "--max_weak_pix", "35000000",
+                // "--max_pix_box", "35000000", 
+                "--limit1", "13000000",
                 "--limit2", "25000000",
                 "--limit3", "35000000",
+                // "--no_opt",
+                "--sparse_unet",
+                // "--dropout", "0.5",
+                // "--addgaussiannoise",
                 "--max_weak_pix", "35000000",
-                "--max_pix_box", "35000000"
+                "--max_pix_box", "35000000",
+                "--biasinit", "0.7319"
+            ]
             ]
         },
         {
@@ -841,8 +852,7 @@
                 "--feature_extractor", "DDA",
                 "-l", "log_l1_loss", 
                 "-la", "1.0",
-                "--empty_eps", "0.01",
-                "--sparse_unet",
+                "--empty_eps", "0.01", 
                 "-sreg", "0.05",
                 "-dw","2", 
                 "-S2",
