--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -740,17 +740,15 @@
                 "--lam_weak", "100", 
                 "--nomain", 
                 "--val_every_n_epochs", "1", 
-                "--weak_batch_size", "2",
-                // "--weak_merge_aug",
+                "--weak_batch_size", "2", 
                 "--occupancymodel",
                 "--buildinginput",
                 // "--useposembedding",
-                // "--weightdecay_pos", "0.001",
-                // "--weightdecay", "0.001",
-                // "--weightdecay_unet", "0.005",
+                "--weightdecay", "0.00001",
+                "--weightdecay_unet", "0.00001",
                 "--sentinelbuildings",
                 "--train_level", "coarse",
-                "--pretrained",
+                // "--pretrained",
                 "--limit1", "9000000",
                 "--limit2", "9000000",
                 "--limit3", "13000000",
@@ -1611,8 +1609,41 @@
                 "-treg", "rwa",
                 "--train_level", "coarse",
                 // "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1855_904/last_model.pth",
-                "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_314_728/last_model.pth",
-                "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_459_540/last_model.pth"
+                "--resume", 
+                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_459_540/last_model.pth"
+            ]
+        },
+        {
+            "name": "eval, RWA, ensemble",
+            "type": "python",
+            "request": "launch",
+            "program": "run_eval.py",
+            "console": "integratedTerminal",
+            "justMyCode": true,
+            "args": [
+                "--model", "POMELO_module",
+                "--head", "v3",
+                "--feature_extractor", "DDA",
+                "--occupancymodel",
+                "--buildinginput",
+                // "--useposembedding",
+                "--sentinelbuildings",
+                "--empty_eps", "0.01",
+                "-dw","2",
+                "-S2",
+                "-NIR",
+                "-S1",
+                "-f", "4",
+                "-rse",
+                "-treg", "rwa",
+                "--train_level", "coarse",
+                // "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1855_904/last_model.pth",
+                "--resume",
+                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_591_466/last_model.pth", 
+                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_591_431/last_model.pth", 
+                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_591_472/last_model.pth", 
+                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_595_898/last_model.pth", 
+                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_589_875/last_model.pth", 
             ]
         },
         {
