on the fly loading of urban extractor

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -716,7 +716,7 @@
                 "-l", "log_l1_loss", 
                 "-la", "1.0",
                 "--empty_eps", "0.01",
-                "-sreg", "0.05",
+                "-sreg", "0.01",
                 "-dw","2", 
                 "-S2",
                 "-NIR",
@@ -742,13 +742,13 @@
                 "--val_every_n_epochs", "1", 
                 "--weak_batch_size", "2", 
                 "--occupancymodel",
-                "--buildinginput",
+                // "--buildinginput",
                 // "--useposembedding",
                 "--weightdecay", "0.00001",
                 "--weightdecay_unet", "0.00001",
                 "--sentinelbuildings",
                 "--train_level", "coarse",
-                // "--pretrained",
+                "--pretrained",
                 "--limit1", "9000000",
                 "--limit2", "9000000",
                 "--limit3", "13000000",
@@ -1638,12 +1638,23 @@
                 "-treg", "rwa",
                 "--train_level", "coarse",
                 // "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1855_904/last_model.pth",
+                // "--resume",
+                //     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_591_466/last_model.pth", 
+                //     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_591_431/last_model.pth", 
+                //     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_591_472/last_model.pth", 
+                //     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_595_898/last_model.pth", 
+                //     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_589_875/last_model.pth",
                 "--resume",
-                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_591_466/last_model.pth", 
-                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_591_431/last_model.pth", 
-                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_591_472/last_model.pth", 
-                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_595_898/last_model.pth", 
-                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_589_875/last_model.pth", 
+                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_597_86/last_model.pth", 
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_624_161/last_model.pth", 
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_624_231/last_model.pth", 
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_623_344/last_model.pth", 
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_622_162/last_model.pth", 
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_629_946/last_model.pth", 
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_626_996/last_model.pth", 
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_626_512/last_model.pth", 
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_626_995/last_model.pth", 
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_630_237/last_model.pth", 
             ]
         },
         {
