--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -805,10 +805,10 @@
                 "--weak_batch_size", "2",
                 // "--weak_merge_aug",
                 "--occupancymodel",
-                "--buildinginput",
-                "--useposembedding",
+                // "--buildinginput",
+                // "--useposembedding",
                 "--weightdecay_pos", "0.0",
-                "--weightdecay", "0.0",
+                "--weightdecay", "0.00002",
                 "--weightdecay_unet", "0.00002",
                 "--sentinelbuildings",
                 "--train_level", "coarse",
@@ -1508,7 +1508,7 @@
                 "--limit2", "9000000",
                 "--limit3", "13000000",
                 "--biasinit", "0.2634",
-                "--no_opt"
+                // "--no_opt"
             ]
         },
         {
@@ -1625,7 +1625,7 @@
                 "--head", "v3",
                 "--feature_extractor", "DDA",
                 "--occupancymodel",
-                "--buildinginput",
+                // "--buildinginput",
                 // "--useposembedding",
                 "--sentinelbuildings",
                 "--empty_eps", "0.01",
@@ -1636,16 +1636,17 @@
                 "-f", "4",
                 "-rse",
                 "-treg", "rwa",
+                // "--fourseasons",
                 "--train_level", "coarse",
                 // "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1855_904/last_model.pth",
-                // "--resume",
+                // "--resume", //OLD
                 //     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_591_466/last_model.pth", 
                 //     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_591_431/last_model.pth", 
                 //     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_591_472/last_model.pth", 
                 //     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_595_898/last_model.pth", 
                 //     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_589_875/last_model.pth",
-                "--resume",
-                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_597_86/last_model.pth", 
+                // "--resume", //OLD
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_597_86/last_model.pth", 
                     // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_624_161/last_model.pth", 
                     // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_624_231/last_model.pth", 
                     // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_623_344/last_model.pth", 
@@ -1655,6 +1656,17 @@
                     // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_626_512/last_model.pth", 
                     // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_626_995/last_model.pth", 
                     // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_630_237/last_model.pth", 
+                "--resume",
+                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_696_451/last_model.pth",
+                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_693_727/last_model.pth",
+                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_693_194/last_model.pth",
+                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_693_526/last_model.pth",
+                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_692_518/last_model.pth",
+                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_690_622/last_model.pth",
+                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_689_611/last_model.pth",
+                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_686_402/last_model.pth",
+                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_681_376/last_model.pth",
+                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_681_24/last_model.pth",
             ]
         },
         {
@@ -1681,11 +1693,41 @@
                 "-rse",
                 "-treg", "pricp2", 
                 "--train_level", "fineTRACTCE", 
-                // "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1855_904/last_model.pth",
-                // "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1891_431/last_model.pth",
-                // "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_442_454/last_model.pth"
-                // "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_462_248/last_model.pth",
-                "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_464_4/last_model.pth",
+                "--resume",
+                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_464_4/last_model.pth",
+            ]
+        },
+        {
+            "name": "eval, PRI, ensemble",
+            "type": "python",
+            "request": "launch",
+            "program": "run_eval.py",
+            "console": "integratedTerminal",
+            "justMyCode": true,
+            "args": [
+                "--model", "POMELO_module",
+                "--feature_extractor", "DDA",
+                "--head", "v3",
+                "--occupancymodel",
+                // "--buildinginput",
+                // "--useposembedding",
+                "--sentinelbuildings",
+                "--empty_eps", "0.01",
+                "-dw","2",
+                "-S2",
+                "-NIR",
+                "-S1",
+                "-f", "4",
+                "-rse",
+                // "--fourseasons",
+                "-treg", "pricp2", 
+                "--train_level", "coarse", 
+                "--resume", //full model
+                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_708_758/last_model.pth",
+                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_709_394/last_model.pth",
+                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_708_44/last_model.pth",
+                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_711_205/last_model.pth",
+                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_724_756/last_model.pth",
             ]
         },
         {
