--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -720,7 +720,7 @@
                 "-dw","2", 
                 "-S2",
                 "-NIR",
-                "-S1",
+                // "-S1",
                 "-f",
                 "4",
                 "-rse",
@@ -777,8 +777,8 @@
                 "--feature_extractor", "DDA",
                 "-l", "log_l1_loss", 
                 "-la", "1.0",
-                "--empty_eps", "0.01", 
-                "-sreg", "0.05",
+                // "--empty_eps", "0.01", 
+                "-sreg", "0.01",
                 "-dw","2", 
                 "-S2",
                 "-NIR",
@@ -786,7 +786,7 @@
                 "-f",
                 "4",
                 "-rse",
-                "-treg", "uga", 
+                "-treg", "rwa", 
                 "-tregtrain", "uga",
                 "-exZH",
                 "-val", "1",
@@ -808,8 +808,8 @@
                 // "--buildinginput",
                 // "--useposembedding",
                 "--weightdecay_pos", "0.0",
-                "--weightdecay", "0.00002",
-                "--weightdecay_unet", "0.00002",
+                "--weightdecay", "0.00001",
+                "--weightdecay_unet", "0.00001",
                 "--sentinelbuildings",
                 "--train_level", "coarse",
                 "--pretrained",
@@ -818,7 +818,7 @@
                 // "--limit3", "35000000",
                 // "--max_weak_pix", "35000000",
                 // "--max_pix_box", "35000000", 
-                "--limit1", "13000000",
+                "--limit1", "15000000",
                 "--limit2", "25000000",
                 "--limit3", "35000000",
                 // "--no_opt",
@@ -827,7 +827,7 @@
                 // "--addgaussiannoise",
                 "--max_weak_pix", "35000000",
                 "--max_pix_box", "35000000",
-                "--biasinit", "0.7319"
+                "--biasinit", "1.3802"
             ]
         },
         {
