--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1180,65 +1180,48 @@
             "justMyCode": false,
             "args": [
                 "-o",
-                "-s",
-                // "--max_samples", "200",
+                "-s", 
                 "-e",   "100",
                 "-b", "16",
                 "-lr", "1e-5", 
                 "--model", "POMELO_module", 
-                "--head", "v2",
-                // "--head", "v3",
-                // "--feature_extractor", "DDA", 
+                "--head", "v3",
+                "--feature_extractor", "DDA",
                 "-l", "log_l1_loss",
-                // "-l", "log_l1_loss",
+                "--empty_eps", "0.0",
+                "-sreg", "0.01",
                 "-la", "1.0",
-                // "-la", "1.0",
-                // "--lam_raw", "0.1",
-                // "--scale_regularization", "0.01",
-                "-esr2", "0.01",
                 "-dw","2",
                 "-S2",
                 "-NIR",
                 "-S1",
                 "-f",
-                // "16",
-                "8",
-                // "--dilation", "2",
+                "4",
                 "-rse",
                 "-treg", "rwa",
-                //"-treg", "pricp2",
                 "-tregtrain", "rwa",
                 "-exZH",
                 "-val", "1",
                 "--lr_step", "5",
-                // "--lr_gamma", "0.5",
                 "--lr_gamma", "0.75",
                 "--full_aug",
                 "--num_workers", "6", 
                 "--seed", "1610",
-                "-gc", "0.001",
-                // "-gc", "0.01",
-                // "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1110_933/last_model.pth",
+                "-gc", "0.01",
                 "--supmode", "weaksup",
                 "--lam_weak", "100",
-                // "--supmode", "unsup",
                 "--nomain",
-                "--weak_merge_aug",
-                // "--max_weak_samples", "2",
                 "--val_every_n_epochs", "1",
-                // "--test_every_i_steps", "50",
-                // "--val_every_n_epochs", "100",
-                // "--weak_batch_size", "4",
                 "--weak_batch_size", "2",
                 "--occupancymodel",
-                "--buildinginput",
+                "--train_level", "coarse",
+                // "--buildinginput",
                 // "--segmentationinput",
-                "--useposembedding",
-                "--weightdecay_pos", "0.0",
-                // "--sentinelbuildings",
-                // "-r77",
-                "--pretrained",
-                // "--gradientaccumulation",
+                // "--useposembedding",
+                "--weightdecay_unet", "0.00001",
+                "--weightdecay_unet", "0.00001",
+                // "--sentinelbuildings", 
+                "--pretrained", 
             ]
         },
         {
